@@ -30,5 +30,6 @@ dependencies {
 }
 
 tasks.named('test') {
+    jvmArgs '-XX:+EnableDynamicAgentLoading'
     useJUnitPlatform()
 }
